# ksh-ingatlanadattar

./: .gitignore  Untitled.ipynb  agglo_top_10_pivot.csv  agglo_top_10_total.csv  convert.js  hu-ingatlan.csv  main.py  osm.ipynb  prep.ipynb  pyproject.toml  telepList.json
agglo-chart/: agglo_top_10_pivot_db.csv
processed/: bp_ingatlanarak.csv  hu-ingatlan.csv  teleplist.csv
raw/: teleplist.js
