[project]
name = "adatviz-beszamolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "lxml>=6.1.0",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
